Fix scrollbar issues in dropdowns
Fixes: https://github.com/go-gitea/gitea/pull/10835

--- a/web_src/less/_base.less
+++ b/web_src/less/_base.less
@@ -1216,3 +1216,11 @@ i.icon.centerlock {
 .ui.attached.segment + .ui.attached.header {
     margin-top: 1rem;
 }
+
+/* limit width of all direct dropdowns menu children */
+/* https://github.com/go-gitea/gitea/pull/10835 */
+.dropdown > .menu > * {
+    max-width: 300px;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+}
